[package]
name = "hjkl1-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
stylist = "0.13.0"
web-sys = "0.3.70"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo = "0.11"
gloo-net = "0.6"
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen-futures = "0.4.43"
