[package]
name = "hjkl1-yew"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
strum = "0.26"
strum_macros = "0.26"
stylist = { version = "0.13.0", features = ["yew", "yew_use_style"] }
web-sys = "0.3.70"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo = { version = "0.11", features = ["timers"] }
gloo-net = "0.6"
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen-futures = "0.4.43"
chrono = { version = "0.4.38", features = ["serde"] }
pulldown-cmark = "0.12.1"
yew-hooks = "0.3.2"
